# Meridian

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  runevision-terrain-gen.md  vcpkg.json
.github/instructions/: cplusplus.instructions.md
shaders/: basic_pathtracer.frag  fullscreen_triangle.vert  pathtracer_denoise.frag  pathtracer_svgf_atrous.frag  pathtracer_svgf_temporal.frag  terrain_heightmap.comp
src/: main.cpp
src/audio/: AudioSystem.cpp  AudioSystem.hpp
src/core/: Engine.cpp  Engine.hpp  ISystem.hpp  Logger.hpp  SystemFrameStats.hpp
src/ecs/: ECSSystem.hpp
src/input/: InputManager.cpp  InputManager.hpp
src/networking/: NetworkSystem.cpp  NetworkSystem.hpp
src/physics/: PhysicsSystem.cpp  PhysicsSystem.hpp
src/renderer/: CameraState.hpp  DebugOverlayRenderer.cpp  DebugOverlayRenderer.hpp  FreeCameraController.cpp  FreeCameraController.hpp  IRenderFeature.hpp  IRenderFrontend.hpp  LightingState.hpp  PathTracerRenderer.cpp  PathTracerRenderer.hpp  PathTracerSettings.hpp  RenderBackendStats.hpp  RenderFrameConfig.hpp  RenderFramePipeline.cpp  RenderFramePipeline.hpp  RenderStateStore.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  VulkanContext.cpp  VulkanContext.hpp  WorldSceneRenderer.cpp  WorldSceneRenderer.hpp
src/scripting/: ScriptingSystem.cpp  ScriptingSystem.hpp
src/tasks/: TaskSystem.hpp
src/window/: Window.cpp  Window.hpp
src/world/: ChunkGenerationVisibility.cpp  ChunkGenerationVisibility.hpp  SparseVoxelOctree.cpp  SparseVoxelOctree.hpp  TerrainHeightmapGenerator.cpp  TerrainHeightmapGenerator.hpp  World.cpp  World.hpp  WorldChunkDatabase.cpp  WorldChunkDatabase.hpp  WorldChunkManager.cpp  WorldChunkManager.hpp  WorldChunkStorage.cpp  WorldChunkStorage.hpp  WorldData.hpp  WorldRenderData.hpp  WorldSpatialHashGrid.cpp  WorldSpatialHashGrid.hpp
